classDiagram
  class Task {
    +description: str
    +at: datetime.time
    +due_date: datetime.date
    +frequency: str
    +completed: bool
    +mark_complete(): Task?
  }

  class Pet {
    +pet_id: str
    +name: str
    +species: str
    +tasks: List[Task]
    +add_task(task: Task): void
    +tasks_for_day(day: date): List[Task]
    +mark_task_complete(description: str, at: time, day: date): bool
    +remove_task(task: Task): void
  }

  class Owner {
    +owner_name: str
    +pets: List[Pet]
    +add_pet(pet: Pet): void
    +all_tasks(): List[tuple[Pet, Task]]
    +find_pet_by_name(name: str): Pet?
  }

  class Scheduler {
    +sort_by_time(tasks: Iterable[Task]): List[Task]
    +filter_tasks(owner: Owner, day?: date, pet_name?: str, completed?: bool): List[tuple[Pet, Task]]
    +build_schedule(owner: Owner, day?: date): tuple[List[dict], List[str]]
    +todays_schedule(owner: Owner, day?: date): List[dict]
    +detect_conflicts(schedule: Iterable[dict]): List[str]
    +format_schedule(schedule: Iterable[dict]): str
  }

  Owner "1" --> "0..*" Pet : owns
  Pet "1" --> "0..*" Task : has
  Scheduler ..> Owner : uses
  Scheduler ..> Pet : iterates
  Scheduler ..> Task : sorts/filters

